--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Srisankaet Cheemalamarri
 #logo: /assets/img/headshot_circle.png
 description: Hello Hello Hello
 #show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minima
